# sanskrit-morph-converter

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/sanskrit_morph_converter/: __init__.py  adapters.py  cli.py  compiler.py  converter.py  mapper.py
src/sanskrit_morph_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sanskrit_morph_converter/data/: nijanta_map.tsv  normalization.tsv  output_normalization.tsv  pivot_mapping.tsv  pronoun_map.tsv  reference.tsv
tests/: test_adaptors.py  test_converter.py  test_mapper.py  test_smc.sh  test_smc_v1.sh
